--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
         with:
-          charts_dir: .
+          charts_dir: isaac-react-app
           config: config.yaml
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
