--- a/charts/isaac-app/templates/deployment.yaml
+++ b/charts/isaac-app/templates/deployment.yaml
@@ -1,13 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "isaac-react-app.fullname" . }}
+  name: {{ include "isaac-app.fullname" . }}
   labels:
-    {{- include "isaac-react-app.labels" . | nindent 4 }}
+    {{- include "isaac-app.labels" . | nindent 4 }}
 spec:
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
-      {{- include "isaac-react-app.selectorLabels" . | nindent 6 }}
+      {{- include "isaac-app.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -15,12 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "isaac-react-app.selectorLabels" . | nindent 8 }}
+        {{- include "isaac-app.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      serviceAccountName: {{ include "isaac-app.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
