--- a/charts/isaac-app/templates/service.yaml
+++ b/charts/isaac-app/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "isaac-react-app.fullname" . }}
+  name: {{ include "isaac-app.fullname" . }}
   labels:
-    {{- include "isaac-react-app.labels" . | nindent 4 }}
+    {{- include "isaac-app.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "isaac-react-app.selectorLabels" . | nindent 4 }}
+    {{- include "isaac-app.selectorLabels" . | nindent 4 }}
