--- a/charts/isaac-app/Chart.yaml
+++ b/charts/isaac-app/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.2
+version: 0.1.3
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -32,3 +32,7 @@ dependencies:
     name: nginx
     version: "13.2.18"
     repository: https://charts.bitnami.com/bitnami
+  - alias: elastic-search
+    name: elasticsearch
+    version: "8.5.1"
+    repository: https://helm.elastic.co
