--- a/charts/isaac-app/values.yaml
+++ b/charts/isaac-app/values.yaml
@@ -46,19 +46,31 @@ elastic-search:
       cpu: "2000m"
       memory: "1Gi"
 
-
-
 replicaCount: 1
 
 image:
-  repository: nginx
+  registry: ghcr.io
+  repository: pelotech/isaac-api
+  tag: latest
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+config:
+  apiVersion: v3.3.2-snapshot
+  logPath: /isaac-logs
+  segueConfigPath: &segueConfigPath /local/data/conf/segue-config.properties
+
+volumeMounts:
+- name: segueConfig
+  mountPath: *segueConfigPath
+
+volumes:
+- name: segueConfig
+  secret:
+    secretName: segue-config-properties
 
 serviceAccount:
   # Specifies whether a service account should be created
