--- a/charts/isaac-app/templates/service.yaml
+++ b/charts/isaac-app/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "isaac-app.fullname" . }}
+  name: {{ include "isaac-app.api.fullname" . }}
   labels:
     {{- include "isaac-app.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.api.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.api.service.port }}
       targetPort: http
       protocol: TCP
       name: http
