--- a/charts/isaac-app/templates/serviceaccount.yaml
+++ b/charts/isaac-app/templates/serviceaccount.yaml
@@ -1,11 +1,11 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.api.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "isaac-app.serviceAccountName" . }}
+  name: {{ include "isaac-app.api.serviceAccountName" . }}
   labels:
     {{- include "isaac-app.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+  {{- with .Values.api.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
