--- a/charts/isaac-app/values.yaml
+++ b/charts/isaac-app/values.yaml
@@ -1,6 +1,8 @@
 # Default values for isaac-app.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+nameOverride: ""
+fullnameOverride: ""
 
 isaac-app-fe:
   image:
@@ -54,92 +56,92 @@ elastic-search:
       cpu: "2000m"
       memory: "1Gi"
 
-replicaCount: 1
+api:
+  name: "api"
+  replicaCount: 1
 
-image:
-  repository: ghcr.io/pelotech/isaac-api
-  tag: latest
-  pullPolicy: Always
+  image:
+    repository: ghcr.io/pelotech/isaac-api
+    tag: latest
+    pullPolicy: Always
 
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+  imagePullSecrets: []
 
-config:
-  apiVersion: v3.3.2-snapshot
-  secretName: isaac-secrets
-  sshSecretName: isaac-ssh-key
-  contentRepo: git@github.com:pelotech/rutherford-content.git
+  config:
+    apiVersion: v3.3.2-snapshot
+    secretName: isaac-secrets
+    sshSecretName: isaac-ssh-key
+    contentRepo: git@github.com:pelotech/rutherford-content.git
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  serviceAccount:
+    # Specifies whether a service account should be created
+    create: true
+    # Annotations to add to the service account
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
 
-podAnnotations: {}
+  podAnnotations: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+  podSecurityContext: {}
+    # fsGroup: 2000
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  securityContext: {}
+    # capabilities:
+    #   drop:
+    #   - ALL
+    # readOnlyRootFilesystem: true
+    # runAsNonRoot: true
+    # runAsUser: 1000
 
-service:
-  type: ClusterIP
-  port: 80
+  service:
+    type: ClusterIP
+    port: 80
 
-ingress:
-  enabled: enabled
-  className: "alb"
-  annotations:
-    alb.ingress.kubernetes.io/load-balancer-name: shared-alb
-    alb.ingress.kubernetes.io/group.name: shared-group
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: 'ip'
-    alb.ingress.kubernetes.io/ssl-redirect: '443'
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
-  hosts:
-    - host: www.isaac.classis.io
-      paths:
-        - path: /isaac-api/*
-          pathType: ImplementationSpecific
-        - path: /api/*
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  ingress:
+    enabled: enabled
+    className: "alb"
+    annotations:
+      alb.ingress.kubernetes.io/load-balancer-name: shared-alb
+      alb.ingress.kubernetes.io/group.name: shared-group
+      alb.ingress.kubernetes.io/scheme: internet-facing
+      alb.ingress.kubernetes.io/target-type: 'ip'
+      alb.ingress.kubernetes.io/ssl-redirect: '443'
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
+    hosts:
+      - host: www.isaac.classis.io
+        paths:
+          - path: /isaac-api/*
+            pathType: ImplementationSpecific
+          - path: /api/*
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+    # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: {}
+  nodeSelector: {}
 
-tolerations: []
+  tolerations: []
 
-affinity: {}
+  affinity: {}
