--- a/charts/isaac-app/templates/service.yaml
+++ b/charts/isaac-app/templates/service.yaml
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "isaac-app.selectorLabels" . | nindent 4 }}
+    {{- include "isaac-app.api.selectorLabels" . | nindent 4 }}
