--- a/charts/isaac-app/templates/hpa.yaml
+++ b/charts/isaac-app/templates/hpa.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.api.autoscaling.enabled }}
+---
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -24,5 +25,35 @@ spec:
       resource:
         name: memory
         targetAverageUtilization: {{ .Values.api.autoscaling.targetMemoryUtilizationPercentage }}
+    {{- end }}
+{{- end }}
+
+---
+{{- if .Values.etl.autoscaling.enabled }}
+apiVersion: autoscaling/v2beta1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: {{ include "isaac-app.etl.fullname" . }}
+  labels:
+    {{- include "isaac-app.labels" . | nindent 4 }}
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: {{ include "isaac-app.etl.fullname" . }}
+  minReplicas: {{ .Values.etl.autoscaling.minReplicas }}
+  maxReplicas: {{ .Values.etl.autoscaling.maxReplicas }}
+  metrics:
+    {{- if .Values.etl.autoscaling.targetCPUUtilizationPercentage }}
+    - type: Resource
+      resource:
+        name: cpu
+        targetAverageUtilization: {{ .Values.etl.autoscaling.targetCPUUtilizationPercentage }}
+    {{- end }}
+    {{- if .Values.etl.autoscaling.targetMemoryUtilizationPercentage }}
+    - type: Resource
+      resource:
+        name: memory
+        targetAverageUtilization: {{ .Values.etl.autoscaling.targetMemoryUtilizationPercentage }}
     {{- end }}
 {{- end }}
