--- a/charts/isaac-app/templates/serviceaccount.yaml
+++ b/charts/isaac-app/templates/serviceaccount.yaml
@@ -10,3 +10,17 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- end }}
+
+---
+{{- if .Values.etl.serviceAccount.create -}}
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ include "isaac-app.etl.serviceAccountName" . }}
+  labels:
+    {{- include "isaac-app.labels" . | nindent 4 }}
+  {{- with .Values.etl.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
