--- a/charts/isaac-app/templates/deployment.yaml
+++ b/charts/isaac-app/templates/deployment.yaml
@@ -43,15 +43,14 @@ spec:
               value: /local/data/conf/segue-config.properties
             - name: JAVA_OPTIONS
               value: -Dsegue.version={{ .Values.api.config.apiVersion}}
-{{/*reenable*/}}
-{{/*          livenessProbe:*/}}
-{{/*            httpGet:*/}}
-{{/*              path: /*/}}
-{{/*              port: http*/}}
-{{/*          readinessProbe:*/}}
-{{/*            httpGet:*/}}
-{{/*              path: /*/}}
-{{/*              port: http*/}}
+          livenessProbe:
+            httpGet:
+              path: /isaac-app/api/info/segue_version
+              port: 8080
+          readinessProbe:
+            httpGet:
+              path: /isaac-app/api/info/segue_version
+              port:  8080
           resources:
             {{- toYaml .Values.api.resources | nindent 12 }}
           volumeMounts:
