--- a/charts/isaac-app/templates/deployment.yaml
+++ b/charts/isaac-app/templates/deployment.yaml
@@ -45,12 +45,18 @@ spec:
               value: -Dsegue.version={{ .Values.api.config.apiVersion}}
           livenessProbe:
             httpGet:
-              path: /isaac-app/api/info/segue_version
-              port: 8080
+              path: /isaac-api/api/info/segue_version
+              port: http
           readinessProbe:
             httpGet:
-              path: /isaac-app/api/info/segue_version
-              port:  8080
+              path: /isaac-api/api/info/segue_version
+              port:  http
+          startupProbe:
+            httpGet:
+              path: /isaac-api/api/info/segue_version
+              port:  http
+            periodSeconds: 10
+            failureThreshold: 30
           resources:
             {{- toYaml .Values.api.resources | nindent 12 }}
           volumeMounts:
