Specify prometheus metrics path

--- a/charts/isaac-app/templates/api/deployment.yaml
+++ b/charts/isaac-app/templates/api/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       {{- if .Values.api.prometheusExport.enabled }}
       annotations:
         prometheus.io/port: {{ .Values.api.prometheusExport.port }}
+        prometheus.io/path: {{ .Values.api.prometheusExport.path }}
         prometheus.io/scrape: true
       {{- end }}
       labels:
