--- a/charts/isaac-app/templates/api/deployment.yaml
+++ b/charts/isaac-app/templates/api/deployment.yaml
@@ -14,9 +14,9 @@ spec:
     metadata:
       {{- if .Values.api.prometheusExport.enabled }}
       annotations:
-        prometheus.io/port: {{ .Values.api.prometheusExport.port }}
-        prometheus.io/path: {{ .Values.api.prometheusExport.path }}
-        prometheus.io/scrape: true
+        prometheus.io/port: {{ .Values.api.prometheusExport.port | quote }}
+        prometheus.io/path: {{ .Values.api.prometheusExport.path | quote }}
+        prometheus.io/scrape: "true"
       {{- end }}
       labels:
         {{- include "isaac-app.api.selectorLabels" . | nindent 8 }}
@@ -38,7 +38,7 @@ spec:
               containerPort: 8080
               protocol: TCP
             {{- if .Values.api.prometheusExport.enabled }}
-            - name: prometheusExport
+            - name: prometheus
               containerPort: {{ .Values.api.prometheusExport.port }}
               protocol: TCP
             {{- end }}
