--- a/charts/isaac-app/values.yaml
+++ b/charts/isaac-app/values.yaml
@@ -203,6 +203,8 @@ chemChecker:
   service:
     type: ClusterIP
     port: 5000
+  ingress:
+    enabled: false
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
@@ -237,7 +239,9 @@ codeEditor:
   # runAsUser: 1000
   service:
     type: ClusterIP
-    port: 5000
+    port: 80
+  ingress:
+    enabled: false
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
@@ -272,7 +276,7 @@ contentEditor:
   # runAsUser: 1000
   service:
     type: ClusterIP
-    port: 5000
+    port: 80
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
