Added cdn to chart

--- a/charts/isaac-app/Chart.yaml
+++ b/charts/isaac-app/Chart.yaml
@@ -28,6 +28,10 @@ dependencies:
     name: nginx
     version: "13.2.18"
     repository: https://charts.bitnami.com/bitnami
+  - alias: isaac-cdn
+    name: nginx
+    version: "13.2.18"
+    repository: https://charts.bitnami.com/bitnami
   - alias: isaac-app-renderer
     name: nginx
     version: "13.2.18"
