Added cert-manager annotation and tls config to cdn nginx values.

--- a/charts/isaac-app/values.yaml
+++ b/charts/isaac-app/values.yaml
@@ -33,6 +33,12 @@ isaac-cdn:
     ingressClassName: nginx
     hostname: cdn.isaac.classis.io
     path: "/"
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+    extraTls:
+      - hosts:
+          - cdn.isaac.classis.io
+        secretName: cdn-isaac
 
 isaac-app-renderer:
   image:
