--- a/charts/isaac-app/values.yaml
+++ b/charts/isaac-app/values.yaml
@@ -277,14 +277,14 @@ codeEditor:
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
     hosts:
-      - host: editor.isaac.classis.io
+      - host: code-editor.isaac.classis.io
         paths:
           - path: /
             pathType: Prefix
     tls:
-      - secretName: editor-isaac
+      - secretName: code-editor-isaac
         hosts:
-          - editor.isaac.classis.io
+          - code-editor.isaac.classis.io
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
@@ -322,7 +322,19 @@ contentEditor:
     type: ClusterIP
     port: 80
   ingress:
-    enabled: false
+    enabled: enabled
+    className: "nginx"
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+    hosts:
+      - host: content-editor.isaac.classis.io
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: content-editor-isaac
+        hosts:
+          - content-editor.isaac.classis.io
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
