Change repo key path and update dependencies

--- a/charts/isaac-app/templates/api/deployment.yaml
+++ b/charts/isaac-app/templates/api/deployment.yaml
@@ -63,6 +63,8 @@ spec:
           volumeMounts:
             - name: isaac-config
               mountPath: /local/data/conf
+            - name: isaac-ssh-key
+              mountPath: /local/data/ssh-key
             - name: git-content
               mountPath: /local/data/git
         - name: git-sync
