--- a/charts/isaac-app/values.yaml
+++ b/charts/isaac-app/values.yaml
@@ -49,6 +49,78 @@ isaac-app-renderer:
     type: ClusterIP
   containerPorts:
     http: 80
+  ingress:
+    enabled: true
+    ingressClassName: nginx
+    hostname: editor-preview.isaac.classis.io
+    path: "/"
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+    extraTls:
+      - hosts:
+          - editor-preview.isaac.classis.io
+        secretName: editor-preview-isaac
+
+
+# TODO set staging API url?
+isaac-content-editor:
+  image:
+    registry: ghcr.io
+    repository: isaaccomputerscience/isaac-content-editor
+    tag: latest
+  service:
+    type: ClusterIP
+  containerPorts:
+    http: 80
+  ingress:
+    enabled: true
+    ingressClassName: nginx
+    hostname: content-editor.isaac.classis.io
+    path: "/"
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+    extraTls:
+      - hosts:
+          - content-editor.isaac.classis.io
+        secretName: content-editor-isaac
+  extraEnvVars:
+    - name: NODE_ENV
+      value: production
+    - name: REACT_APP_SITE
+      value: CS
+    - name: REACT_APP_CLIENT_ID
+      value: f929345390ca5ca6e1ba
+    - name: REACT_APP_AUTH_CODE
+      value: WD4uGrm2iTFxmvwHjybnCSzIpgFk3r//7twVti62RpnQWyFteaKK11q6wLBQX6bb/yy9NY9t0m79MxokXUVZpRNzczPvBAkW6WGfmdCUa5tNs3UMswWmpITiv/                   TiGHJKxDRZ9m2KYgly3jqLzEU1EY7KznCCa16x7MLzdcQzyYKYS49RB3V/+B7IsuyDPQLRVffRTe/2MkrZmx98kj9x14eMgteIRQ7aYhi1pDsYE1dVGOMyojgoPsf6
+    - name: REACT_APP_CONTENT_REPO
+      value: isaac-content-2
+    - name: REACT_APP_PREVIEW_HOST
+      value: https://editor-preview.isaac.classis.io
+    - name: REACT_APP_API_STAGING_HOST
+      value: https://www.isaac.classis.io
+    - name: REACT_APP_API_HOST
+      value: https://www.isaac.classis.io
+
+isaac-code-editor:
+  image:
+    registry: ghcr.io
+    repository: isaaccomputerscience/isaac-code-editor
+    tag: latest
+  service:
+    type: ClusterIP
+  containerPorts:
+    http: 80
+  ingress:
+    enabled: true
+    ingressClassName: nginx
+    hostname: code-editor.isaac.classis.io
+    path: "/"
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+    extraTls:
+      - hosts:
+          - code-editor.isaac.classis.io
+        secretName: code-editor-isaac
 
 elastic-search:
   protocol: http
@@ -230,106 +302,6 @@ chemChecker:
     #   cpu: 100m
     #   memory: 128Mi
     # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-  nodeSelector: {}
-  tolerations: []
-  affinity: {}
-
-codeEditor:
-  name: "code-editor"
-  replicaCount: 1
-  image:
-    repository: ghcr.io/isaaccomputerscience/isaac-code-editor
-    tag: latest
-    pullPolicy: Always
-  imagePullSecrets: []
-  podAnnotations: {}
-  podSecurityContext: {}
-  # fsGroup: 2000
-  securityContext: {}
-    # capabilities:
-    #   drop:
-    #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-  service:
-    type: ClusterIP
-    port: 80
-  ingress:
-    enabled: enabled
-    className: "nginx"
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-    hosts:
-      - host: code-editor.isaac.classis.io
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: code-editor-isaac
-        hosts:
-          - code-editor.isaac.classis.io
-  resources: {}
-    # We usually recommend not to specify default resources and to leave this as a conscious
-    # choice for the user. This also increases chances charts run on environments with little
-    # resources, such as Minikube. If you do want to specify resources, uncomment the following
-    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-  nodeSelector: {}
-  tolerations: []
-  affinity: {}
-
-contentEditor:
-  name: "content-editor"
-  replicaCount: 1
-  image:
-    repository: ghcr.io/isaaccomputerscience/isaac-content-editor
-    tag: latest
-    pullPolicy: Always
-  imagePullSecrets: []
-  podAnnotations: {}
-  podSecurityContext: {}
-  # fsGroup: 2000
-  securityContext: {}
-    # capabilities:
-    #   drop:
-    #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-  service:
-    type: ClusterIP
-    port: 80
-  ingress:
-    enabled: enabled
-    className: "nginx"
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-    hosts:
-      - host: content-editor.isaac.classis.io
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: content-editor-isaac
-        hosts:
-          - content-editor.isaac.classis.io
-  resources: {}
-    # We usually recommend not to specify default resources and to leave this as a conscious
-    # choice for the user. This also increases chances charts run on environments with little
-    # resources, such as Minikube. If you do want to specify resources, uncomment the following
-    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
-  # requests:
   #   cpu: 100m
   #   memory: 128Mi
   nodeSelector: {}
