Added chem-checker deployment. Configured deployment probes.

--- a/charts/isaac-app/templates/eq-checker/deployment.yaml
+++ b/charts/isaac-app/templates/eq-checker/deployment.yaml
@@ -35,15 +35,14 @@ spec:
             - name: http
               containerPort: 5000
               protocol: TCP
-{{/*reenable*/}}
-{{/*          livenessProbe:*/}}
-{{/*            httpGet:*/}}
-{{/*              path: /*/}}
-{{/*              port: http*/}}
-{{/*          readinessProbe:*/}}
-{{/*            httpGet:*/}}
-{{/*              path: /*/}}
-{{/*              port: http*/}}
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
           resources:
             {{- toYaml .Values.eqChecker.resources | nindent 12 }}
 
